--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -27,3 +27,5 @@
 - name: Setup Firewall
   import_playbook: ./network/firewall.yml
 
+- name: Setup Services
+  import_playbook: ./common/services.yml
