--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -3,7 +3,6 @@
   connection: local 
   become: yes
   become_method: sudo
-  any_errors_fatal: true
 
   tasks:
     - name: Update All packages
@@ -27,3 +26,5 @@
 - name: Setup Firewall
   import_playbook: ./network/firewall.yml
 
+- name: Setup Services
+  import_playbook: ./common/services.yml
