--- a/playbooks/network/dns_dhcp.yml
+++ b/playbooks/network/dns_dhcp.yml
@@ -76,17 +76,24 @@
         name: ['systemd-resolved']
         state: absent
 
-    - name: Enable dnsmasq and hostapd
-      systemd:
-        name: "{{ item }}"
-        enabled: true
-        masked: 
-      with_items:
-          - 'dnsmasq'
-
     - name: Disable Existing DNS and make sure dnsmasq is off
       service:
         name: "{{ item }}"
         enabled: false
       with_items:
           - 'systemd-resolved'
+
+    - name: Force unmask systemd-resolved
+      shell: sudo systemctl unmask systemd-resolved 
+
+    - name: Force stop systemd-resolved
+      shell: sudo systemctl stop systemd-resolved 
+
+    - name: Force disable systemd-resolved
+      shell: sudo systemctl disable systemd-resolved 
+    
+    - name: Force mask systemd-resolved
+      shell: sudo systemctl mask systemd-resolved 
+
+    - name: Enable dnsmasq
+      shell: sudo systemctl restart dnsmasq 
